# amigos

./: .dockerignore  .env.example  .env.ga  .gitignore  Dockerfile  README.MD  alembic.ini  boot.sh  config.yaml  docker-compose.yaml  main.py  pyproject.toml  rabbit.conf.example  requirements.txt
.github/workflows/: main.yaml
alembic/: env.py
alembic/versions/: 0f25e0fd5152_initial_db.py  333d6f0a9f9f_updated_db.py  339b2bd84ccc_initial_table.py  354defd5a5e0_rename_gametable_column.py  4aa8d7fce8ca_remove_factor_from_question.py  4d84823a2ac1_initial_db.py  93d6f4c77ff2_initial_db.py  a2594c560ce6_change_game_table_add_nullable_end_time.py
app/admin/: models.py  routes.py  schemes.py  views.py
app/base/: base_accessor.py
app/game/: models.py  routes.py  schemes.py  views.py
app/rabbit/: rabbit_accessor.py
app/store/: __init__.py
app/store/admin/: accessor.py
app/store/bot/: accessor.py  dataclasses.py  manager.py  poller.py
app/store/database/: __init__.py  database.py  sqlalchemy.py
app/store/game/: accessor.py
app/store/queue/: queue.py
app/store/rabbit/: accessor.py  rabbit.py
app/store/vk_api/: accessor.py  dataclasses.py  poller.py
app/web/: app.py  config.py  logger.py  middlewares.py  routes.py  utils.py
tests/: conftest.py
tests/bot/: test_bot_manager.py
tests/fixtures/: common.py  game.py
tests/game/: __init__.py  test_question.py
tests/managers/: test_login.py
