[project]
name = "amigos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aio-pika==9.6.2",
    "aiohttp==3.13.4",
    "aiohttp-apispec==2.2.3",
    "aiohttp-session==2.12.1",
    "alembic==1.18.4",
    "asyncpg==0.31.0",
    "cryptography==46.0.6",
    "levenshtein==0.27.3",
    "marshmallow==4.2.3",
    "pytest==9.0.2",
    "pytest-aiohttp==1.1.0",
    "pytest-asyncio==1.3.0",
    "pytest-mock==3.15.1",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
    "sqlalchemy[asyncio]==2.0.48",
]
