[project]
name = "amigos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aio-pika==9.6.2",
    "aiohttp==3.14.1",
    "aiohttp-apispec==2.2.3",
    "aiohttp-session==2.12.1",
    "alembic==1.18.4",
    "asyncpg==0.31.0",
    "cryptography==48.0.1",
    "levenshtein==0.27.3",
    "marshmallow==4.3.0",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
    "sqlalchemy[asyncio]==2.0.50",
]

[dependency-groups]
tests = [
    "pytest==9.0.3",
    "pytest-aiohttp==1.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-mock==3.15.1",
]
